--- a/lab01/project.html
+++ b/lab01/project.html
@@ -22,7 +22,10 @@
 <font SIZE=4 COLOR=#2F4F4F ALIGN=right> กาแฟจากหลากหลายสถานที่ต่างมีจุดเด่นของความอร่อยที่ต่างกัน </font><br><br>
 <font SIZE=4 COLOR=#2F4F4F ALIGN=right> การได้มาดื่มกาแฟร้านนี้ อาจจะทำให้คุณเปิดใจรับกาแฟจากแหล่งอื่นๆ ดูบ้าง  </font><br><br><br>
 
+<font SIZE=5 COLOR=#2F4F4F ALIGN=right> 2. </font><br><br>
 <a href="http://angsila.cs.buu.ac.th/~58160187/887371/lab01/cafe2.html"> <img src="c2.jpg" width="500" height="300"></a><br><br>
+<font SIZE=4 COLOR=#2F4F4F ALIGN=right><b><i> Gallery  </i></b>
+
 <a href="http://angsila.cs.buu.ac.th/~58160187/887371/lab01/cafe3.html"> <img src="c3.jpg" width="500" height="300"></a><br><br>
 <a href="http://angsila.cs.buu.ac.th/~58160187/887371/lab01/cafe4.html"> <img src="c4.jpg" width="500" height="300"></a><br><br>
 <a href="http://angsila.cs.buu.ac.th/~58160187/887371/lab01/cafe5.html"> <img src="c5.jpg" width="500" height="300"></a><br><br>
